<resources>

    <string name="app_name">Proj2</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <color name="brightBlue">#6699FF</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    
    <color name="red">#FF0000</color>
    <color name="green">#00FF00</color>
    <color name="blue">#0000FF</color>
    
    <string name="colourIsLabel">The color is: </string>
    <string name="title">Set The Color</string>

    <string name="zeroPercent">0%</string>
    <string name="hundredPercent">100%</string>
    
    <string name="typeInName">Type in Name</string>
    <string name="setColourBtn">Set</string>
    
    <string name="btnChangeColorName">Change Colour Name</string>
    <string name="btnResetColorSides">Reset</string>
</resources>